--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 yew = { version = "0.20", features = ["csr"] }
 stylist = { version = "0.11", features =  ["yew_integration"] }
-web-sys = "0.3"
+web-sys = { version = "0.3", features = ["Element"] }
