--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 yew = { version = "0.20", features = ["csr"] }
-stylist = { version = "0.11", features =  ["yew_integration"] }
+stylist = { version = "0.11", features =  ["yew_integration", "parser"] }
 web-sys = { version = "0.3", features = ["Element", "Event"] }
 gloo-console = "0.2"
