--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 yew = { version = "0.20", features = ["csr"] }
 stylist = { version = "0.11", features =  ["yew_integration", "parser"] }
-web-sys = { version = "0.3", features = ["Element", "Event", "Window"] }
+web-sys = { version = "0.3", features = ["Element", "Event", "Window", "HtmlInputElement"] }
 gloo-console = "0.2"
