--- a/.github/workflows/continuous_deployment.yml
+++ b/.github/workflows/continuous_deployment.yml
@@ -1,6 +1,9 @@
 # from: https://plippe.github.io/blog/2021/07/12/rust-wasm-github.html
 name: Continuous deployment
-on: [push]
+on: 
+  push:
+    branches: 
+      - main
   # workflow_run:
   #   branches: [main]
   #   workflows: [Continuous integration]
